# RuneCaller

./: CODE_OF_CONDUCT.md  LICENSE.md  README.md  SECURITY.md  covertest.sh  pyproject.toml  requirements.txt  tox.ini
docs/: INDEX.md  ROADMAP.md  events.md
examples/: general.py
examples/events/: extra_args.py  hello_messages.py  minimal.py
examples/mods/: example_plugin_metadata.yaml
examples/mods/hello_world/: example_plugin_metadata.yaml  extensions.py  plugin.py
runecaller/: __bases__.py  __errors__.py  __futures__.py  __init__.py  __olds__.py  lifecycles.py  runes.py  service_locator.py
runecaller/_old/: __bases__.py  lifecycles.py  service_locator.py
runecaller/_old/events/: dispatch.py  enhancements.py  errors.py  event.py  observe.py  saferef.py  subscribe.py
runecaller/_old/hooks/: hook_config.py  hook_executor.py  hook_manager.py  hook_register.py  native_hooks.py
runecaller/events/: advanced.py  dispatch.py  dispatcher.py  enhancements.py  errors.py  event.py  filters.py  middleware.py  observe.py  robust.py  robustapply.py  saferef.py  schema.py  subscribe.py
runecaller/hooks/: core_hooks.py  hook_executor.py  hook_manager.py  hook_register.py  native_hooks.py
runecaller/mods/: loader.py  metadata.py
runecaller/mods/extensions/: auditing.py  dependency.py  framework.py  metadata.py  policy.py  reloader.py  visualizer.py
runecaller/mods/plugins/: loader.py  manager.py  sandbox.py
tests/: __init__.py  test_dispatcher.py  test_packaging.py  test_robustapply.py  test_robustapply_py3_8.py  test_saferef.py
(+5 files in other folders)
